# lfant

./: .gitignore  .kdev_ignore  CMakeLists.txt  NOTICE  README.md  Tutorial.txt  changelog.txt  new-project.bat  new-project.sh
examples/galaga/: CMakeLists.txt  settings.cfg
examples/galaga/android/: AndroidManifest.xml
examples/galaga/assets/entities/: Player.ent
examples/galaga/assets/gui/: MainMenu.gui  hud.gui  hud.swf
examples/galaga/assets/materials/: Diffuse.mat  Lines.mat  Particles.mat  Rocket.mat  Sprite.mat  StarShip.mat
examples/galaga/assets/prefabs/: Player.xml
examples/galaga/assets/scenes/: dftf.scene  final.scene  fps.scene  galaga.scene  init.scene  main.scene  particles.scene  pong.scene  saved.scene  simple.scene  voxels.scene
examples/galaga/assets/scripts/: Entity.cpp  TestComponent.nut  test.as
examples/galaga/assets/settings/: game.cfg  gui.cfg  input.cfg  physics.cfg  renderer.cfg  renderer.prop  userinterface.cfg
examples/galaga/assets/shaders/: DepthOfField.frag  Diffuse.frag  Diffuse.shader  FrameBuffer.frag  FrameBuffer.vert  Sprite.vert  Voxel.frag  Voxel.geom  Voxel.vert
examples/galaga/bin32/linux/: lfantdir.txt
examples/galaga/bin32/windows/: lfantdir.txt
examples/galaga/bin64/linux/: launcher
examples/galaga/bin64/windows/: GameLog.txt
examples/galaga/settings/: settings.cfg
examples/galaga/src/: CMakeLists.txt  Makefile  Makefile.galaga  galaga.pro  settings.pri
examples/galaga/src/galaga/: .cproject  CMakeLists.txt  Character.cpp  Character.h  DftfPlayer.cpp  DftfPlayer.h  Evolution.cpp  Evolution.h  FollowEntity.cpp  FollowEntity.h  Galaga.cpp  Galaga.h  Inventory.cpp  Inventory.h  Inventory.h.orig  MouseLook.cpp  MouseLook.h  Movement.cpp  Movement.h  Player.cpp  Player.cpp.orig  Player.h  Player.h.orig  PongBall.cpp  PongBall.h  PongPaddle.h  PongPlayer.cpp  PongPlayer.h  Projectile.cpp  Projectile.h  Weapon.cpp  Weapon.cpp.orig  Weapon.h  Weapon.h.orig  main.cpp.old
examples/galaga/src/game/: .project  CMakeLists.txt  Galaga.cpp  Galaga.hpp  Makefile  Player.cpp  Player.hpp  Projectile.cpp  Projectile.hpp  game.pro
examples/galaga/src/launcher/: .cproject  .project  CMakeLists.txt  Makefile  launcher  launcher.pro  main.cpp
project-template/: CMakeLists.txt  setup.sh
project-template/android/: AndroidManifest.xml
project-template/android/jni/: Android.mk
project-template/assets/shaders/: FrameBuffer.frag
project-template/assets/shaders/particles/: Diffuse.vert
project-template/src/: codews.workspace
project-template/src/game/: Game.cpp  Game.h  Game.hpp  game.cbp  main.cpp
project-template/src/launcher/: CMakeLists.txt  main.cpp
src/editor/: .cproject  .project  CMakeLists.txt  Editor.cpp  Editor.h  EntityTree.cpp  EntityTree.h  Inspector.cpp  Inspector.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  MouseLook.cpp  MouseLook.h  Movement.cpp  Movement.h  Player.cpp  Player.h  Rotatable.cpp  Rotatable.h  editor.pro  main.cpp
src/editor/gui/: App.cpp  App.h  DirTree.cpp  DirTree.h  EntityTree.cpp  EntityTree.h  Frame.cpp  Frame.h  GLCanvas.cpp  GLCanvas.h  Inspector.cpp  Inspector.h  Types.h  ValueCheckBox.cpp  ValueCheckBox.h  ValueDoubleSpinBox.cpp  ValueDoubleSpinBox.h  ValueGrid.cpp  ValueGrid.h  ValueLineEdit.cpp  ValueLineEdit.h  ValueSlider.cpp  ValueSlider.h  ValueVectorEdit.cpp  ValueVectorEdit.h  ValueWidget.h  Window.cpp  Window.h
src/engine/: .cproject  .project  Archive.hpp  Audio.cpp  Audio.hpp  AudioListener.cpp  AudioListener.hpp  AudioSource.cpp  AudioSource.hpp  BitField.hpp  BoxCollider.cpp  BoxCollider.hpp  CMakeLists.txt  Camera.cpp  Camera.hpp  Collider.cpp  Collider.hpp  Component.cpp  Component.hpp  Config.hpp  Config.hpp.in  Console.cpp  Console.hpp  Doxyfile  Engine.cpp  Engine.hpp  Entity.cpp  Entity.hpp  FileManager.cpp  FileManager.hpp  FileSystem.cpp  FileSystem.hpp  HingeJoint.hpp  Input.cpp  Input.hpp  Joint.cpp  Joint.hpp  Light.cpp  Light.hpp  Magnet.hpp  (+78 more)
src/lfant/: .Camera.cpp.swp  .Entity.hpp.swp  Animation.cpp  Animation.h  Archive.h  Audio.cpp  Audio.cpp~RF3428b8e.TMP  Audio.h  Audio.h~RF341ea6c.TMP  AudioListener.cpp  AudioListener.cpp~RF3433e34.TMP  AudioListener.h  AudioSource.cpp  AudioSource.cpp.old  AudioSource.cpp~RF3439ea3.TMP  AudioSource.h  AudioSource.h~RF343ef73.TMP  BitField.h  BoxCollider.cpp  BoxCollider.h  CImg.h  CMakeLists.txt  CMakeLists.txt.YE3928  CMakeLists.txt.orig  CMakeLists.txt.rI8372  CMakeLists.txt~  CMakeLists.txt~RF8c547f.TMP  Camera.cpp  Camera.h  CapsuleCollider.cpp  CapsuleCollider.h  CapsuleCollider.h~  CharacterController.cpp  CharacterController.h  ChatClient.cpp  ChatClient.h  ChatClient.hpp  ChatServer.cpp  ChatServer.h  ChatServer.hpp  (+172 more)
src/lfant/gui/: CMakeLists.txt  FileSystem.cpp  FileSystem.h  Image.cpp  Image.h  Renderer.cpp  Renderer.h  Renderer.hpp  System.cpp  System.h
src/lfant/gui/gwen/: CMakeLists.txt  OpenGL.cpp  OpenGL.cpp.hE3928  OpenGL.cpp~  OpenGL.cpp~RFbc2c8b.TMP  OpenGL.h  Platform.cpp  Renderer.cpp  Renderer.h  SFML2.cpp  UserInterface.cpp  UserInterface.cpp~RFac071f.TMP  UserInterface.h  UserInterface.h~RFb0458c.TMP
src/lfant/gui/rocket/: CMakeLists.txt  Renderer.cpp  Renderer.h  System.cpp  System.h  UserInterface.cpp  UserInterface.h
src/lfant/gui/sfgui/: CMakeLists.txt  UserInterface.cpp  UserInterface.h
src/lfant/net/: Connection.cpp  Connection.h  User.cpp  User.h
src/lfant/net/tcp/: Client.cpp  Client.cpp~RF2259c12.TMP  Client.h  Connection.cpp  Connection.h  Server.cpp  Server.h
src/lfant/net/udp/: Client.h  (+5 more)
src/lfant/network/: Client.cpp  Client.h  Connection.cpp  Connection.h  Server.cpp  Server.h
src/lfant/physics/: DebugRenderer.cpp  DebugRenderer.h  MotionState.cpp  MotionState.h
src/lfant/util/: Math.h  Path.cpp  Path.h  String.cpp  String.h  lexical_cast.cpp  lexical_cast.cpp~RF7f67537.TMP  lexical_cast.h  qumap.h
src/lfantd/: CMakeLists.txt  app.d  component.d  entity.d  framebuffer.d  game.d  gameobject.d  geometry.d  input.d  physics.d  premake5.lua  properties.d  rect.d  renderer.d  scene.d  subsystem.d  time.d  transform.d  window.d
tests/: CMakeLists.txt
(+134 files in other folders)
